2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: add "video/x-ms-wm"
	as a supported and advertised, to avoid error messages
	on the mixmegapol website website as in (Closes: #350930)

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add application/x-quicktimeplayer
	as a supported mime-type
	* src/plparse/test-parser.c: (main): update the help output for
	"disable-unsafe"
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_add_quicktime_rtsptextrtsp),
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_is_quicktime):
	Add a basic parser for RTSPtextRTSP quicktime reference files
	(Closes: #302482)

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (test_parsing), (main):
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_class_init),
	(totem_pl_parser_set_property), (totem_pl_parser_get_property),
	(totem_pl_parser_parse_internal):
	* src/totem-mozilla-viewer.c: (totem_embedded_push_parser):
	Add a "disable-unsafe" property on the playlist parser, and mark
	some mime-types as unsafe (incidentally, the same ones that are
	disabled for the mini-version). Disable those mime-types when
	"disable-unsafe" is used, as used in the -viewer (Closes: #361426)

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: start the viewer immediately
	when the src points to an unsupported scheme, in ::SetWindow,
	allows playback at channeluk.com (Closes: #361212)

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: add "video/x-ms-wma"
	as a supported mime-type (Closes: #361504)

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: move video/x-ms-wvx to the
	advertised-as-supported mime-types, as used on the adultswim.com
	website (Closes: #361183)

2006-10-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemComplexPlugin.cpp: add "audio/x-pn-realaudio"